Completed the apis and test cases
