# src/main/java/com/neo/bank/api/mapper/CustomerMapper.java
@@ -4,10 +4,13 @@ import com.neo.bank.api.entity.Customer;
 import com.neo.bank.api.model.CreateAccountData;
 import com.neo.bank.api.model.CreateAccountRequest;
 import com.neo.bank.api.model.CreateAccountResponse;
+import com.neo.bank.api.model.UpdateAccountRequest;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import org.springframework.stereotype.Component;
+
+import static java.util.Objects.nonNull;
 
 @Component
 public class CustomerMapper {
@@ -27,5 +30,11 @@ public class CustomerMapper {
         return CreateAccountData.builder()
                 .customerId(customer.getCustomerId())
                 .build();
+    }
+
+    public Customer mapUpdateAccountRequest(Customer customer,UpdateAccountRequest updateAccountRequest) {
+        BigDecimal addBalance=nonNull(updateAccountRequest.getAddFund())?new BigDecimal(updateAccountRequest.getAddFund()):BigDecimal.ZERO;
+        customer.setAvailableBalance(customer.getAvailableBalance().add(addBalance));
+        return customer;
     }
 }
