# src/main/java/com/neo/bank/api/repository/CustomerRepository.java
@@ -1,7 +1,9 @@
 package com.neo.bank.api.repository;
 
 import com.neo.bank.api.entity.Customer;
+import java.util.Optional;
 import org.springframework.data.jpa.repository.JpaRepository;
 
 public interface CustomerRepository extends JpaRepository<Customer,Long> {
+    Optional<Customer> findByCustomerId(String customerId);
 }
