# src/main/java/com/neo/bank/api/service/EmployeeCustomerService.java
@@ -5,6 +5,8 @@ import com.neo.bank.api.mapper.CustomerMapper;
 import com.neo.bank.api.mapper.ResponseMetaMapper;
 import com.neo.bank.api.model.CreateAccountRequest;
 import com.neo.bank.api.model.CreateAccountResponse;
+import com.neo.bank.api.model.UpdateAccountRequest;
+import com.neo.bank.api.model.UpdateAccountResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -14,22 +16,28 @@ import static com.neo.bank.api.constant.BankConstant.ACCOUNT_CREATE_SUCCESS_MESS
 @Service
 @RequiredArgsConstructor
 public class EmployeeCustomerService {
-    private final CustomerService customerService;
+    private final CustomerClientService customerClientService;
     private final ResponseMetaMapper responseMetaMapper;
     private final CustomerMapper customerMapper;
-    private final BankEmployeeService bankEmployeeService;
+    private final BankEmployeeClientService bankEmployeeClientService;
 
     public CreateAccountResponse createAccount(String employeeId,CreateAccountRequest createAccountRequest) {
         verifyEmployee(employeeId);
         Customer customer =   customerMapper.mapCreateAccountRequest(createAccountRequest);
         return  CreateAccountResponse.builder()
                 .meta(responseMetaMapper.mapResponseMeta(ACCOUNT_CREATE_SUCCESS_CODE,ACCOUNT_CREATE_SUCCESS_MESSAGE))
-                .data(customerMapper.mapCreateAccountResponse(customerService.createCustomer(customer)))
+                .data(customerMapper.mapCreateAccountResponse(customerClientService.createCustomer(customer)))
                 .build();
     }
 
     private void verifyEmployee(String employeeId) {
-        bankEmployeeService.getEmployee(employeeId);
+        bankEmployeeClientService.getEmployee(employeeId);
     }
 
+    public UpdateAccountResponse updateAccount(String employeeId, UpdateAccountRequest updateAccountRequest) {
+        verifyEmployee(employeeId);
+        Customer customer=customerClientService.getCustomer(updateAccountRequest.getCustomerId());
+        Customer updateRequestCustomer=customerMapper.mapUpdateAccountRequest(customer,updateAccountRequest);
+        return UpdateAccountResponse.builder().build();
+    }
 }
